@@ -1,3 +1,7 @@
+2010-11-19  smeghead <smeghead7@gmail.com>
+
+	* simplified search ticket page. some descriptions display at tooltip window, in search ticket page.
+
 2010-11-18  smeghead <smeghead7@gmail.com>
 
 	* simplified items setting page. many descriptions display at tooltip window, in items setting admin page.
